<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACI810 Control 3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="operacion1">Radio1</string>
    <string name="click"></string>
    <string name="operacion2">Radio2</string>
    <string name="editText1"> Ingresar</string>
    <string name="operacion3">Radio3 </string>
    <string name="submit">Submit</string>
    <string name="valor_entregado">Valor entregado</string>
    <string name="texto1">Datos</string>
    <string name="opcion_seleccionada">texto</string>
    <string name="formulario">Formulario</string>
    <string name="nombre_">Nombre:</string>
    <string name="switch_">Switch:</string>
    <string name="texto2"></string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
